# zeramatumizi

./: .dockerignore  .gitignore  1.1.0  Dockerfile  LICENSE  README.md  podman-compose.yml  pyproject.toml  test_api.py
.github/workflows/: ci.yml
data/chroma_db/: chroma.sqlite3
data/raw/: kdhs_sample.parquet  swahili_ner_training.json
docs/: model_card.md
docs/reports/: causal_dag.html  county_report_Kisumu_202606.md  destigma_messages_20260630_054149.md  rag_session_20260629_221328.txt
src/zeramatumizi/api/: main.py  schemas.py
src/zeramatumizi/bayesian/: hierarchical_model.py
src/zeramatumizi/causal/: dag.py  did_analysis.py  iv_analysis.py  rdd_analysis.py
src/zeramatumizi/dashboard/: app.py
src/zeramatumizi/ingestion/: loader.py  validator.py
src/zeramatumizi/models/: gnn_peer_network.py  isolation_forest.py  quantum_kmeans.py  random_survival_forest.py  xgboost_classifier.py
src/zeramatumizi/nlp/: message_generator.py  rag_pipeline.py  report_generator.py  sentiment_analysis.py  swahili_ner_data.py  swahili_ner_model.py  topic_modelling.py
src/zeramatumizi/quantum/: classical_benchmark.py  qaoa_optimiser.py
tests/unit/: test_ingestion.py
