[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeramatumizi"
version = "0.1.0"
description = "A Causal AI Early Warning and Precision Intervention System for Drug and Substance Use Disorders in Kenya"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Brian Omare", email = "omarebrian4@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]
